--- a/main.css
+++ b/main.css
@@ -39,8 +39,9 @@ a{
 }
 
 p{
+    font-family: "Calibre","sf mono";
     font-size: 1.8rem;
-    font-weight: 300;
+    font-weight: 400;
 }
 h6{
     color:#27e8a7;
@@ -53,15 +54,20 @@ img{
 
 
 @font-face {
-    font-family: 'The Historia Demo';
+    font-family: "Calibre Regular", "SF Mono" ,'The Historia Demo';
     src: url('fonts/thehistoriademo-webfont.woff2') format('woff2'),
-         url('fonts/thehistoriademo-webfont.woff') format('woff');
+        url('fonts/thehistoriademo-webfont.woff') format('woff'),
+        url("Calibre-Regular.woff") format('woff'),
+        url("SFMono-Regular.woff") format('woff');
     font-weight: normal;
     font-style: normal;
-  }
+}
+
+/** Regular */
 
 
-  
+
+
 /*End global*/
 
 /*Start reusable*/
