--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ html{
 }
 
 body{
-    font-family: 'sf mono';
+    font-family:"Calibre","sf mono";
     /* width: 100%;
     height: 100%; */
     /* background: linear-gradient(-45deg, 	#0a192f	, 	#172a45, #333f58); */
@@ -29,6 +29,8 @@ span{
     color: #a8b2d1;
 }
 
+
+
 section{
     padding:6rem 0;
 }
@@ -39,7 +41,7 @@ a{
 }
 
 p{
-    font-family: "Calibre","sf mono";
+    
     font-size: 1.8rem;
     font-weight: 400;
 }
@@ -57,8 +59,8 @@ img{
     font-family: "Calibre Regular", "SF Mono" ,'The Historia Demo';
     src: url('fonts/thehistoriademo-webfont.woff2') format('woff2'),
         url('fonts/thehistoriademo-webfont.woff') format('woff'),
-        url("Calibre-Regular.woff") format('woff'),
-        url("SFMono-Regular.woff") format('woff');
+        url("fonts/Calibre-Regular.woff") format('woff'),
+        url("fonts/SFMono-Regular.woff") format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -160,13 +162,16 @@ li{
     font-size: 5rem;
     padding: 1rem;
 }
+
 .nav-link:hover,
 .nav-link:focus{
     /* background: linear-gradient(to top, #78d8c3, #c31985); */
-    background: linear-gradient(to top, #27e8a7, #32ae85);
+    background: linear-gradient(to top, #27e8a7, #5beaed);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    
 }
+
 
 .top-nav.open{
     top: 0;
@@ -191,7 +196,7 @@ li{
 }
 
 .bar{
-    background: linear-gradient(to right, #df4576, #add7ff);
+    background: linear-gradient(to right, #27e8a7, #add7ff);
     width: 100%;
     height:4px;
     border-radius: .8rem;
@@ -233,15 +238,16 @@ li{
 .landing-text h2 {
     margin-right: 20%;
     display: inline-block;
-    font-size:2.9rem;
+    font-size:2rem;
     letter-spacing: 0.1em;
+    color: #add7ff;
     
 }
 
 .landing-text h1{
     justify-content: center;
     font-size:8rem;
-    font-family: 'sf mono','Roboto', sans-serif;
+    font-family: 'Calibre','sf mono', 'sans-serif';
     /* font-family: 'The Historia Demo', sans-serif; */
     background: #a8b2d1;
     /* background: linear-gradient(to top, #2ee3bb, #f421a6); */
@@ -337,7 +343,7 @@ li{
     transition: color 650ms;
 }
 .fa-github-square:hover{
-    color: rgb(126, 124, 124);
+    color: #a8b2d1;
 }
 .fa-instagram:hover{
     color: #c31985
@@ -440,9 +446,9 @@ li{
 
 /*Start timeline*/
 .timeline ul{
-    border-left: 4px solid #b4adff;
+    border-left: 4px solid #27e8a7;
     border-radius: .8rem;
-    background-color:rgba(0,0,0,0.05);
+    background-color:#172a45;
     margin: 0 auto;
     position: relative;
     padding: 5rem;
@@ -464,6 +470,7 @@ li{
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     position:relative;
+    
 }
 
 .timeline .date:last-of-type{
@@ -478,6 +485,7 @@ li{
     display: block;
     top: 50%;
     transform: translateY(-50%);
+    
 }
 
 .timeline .date::before{
@@ -486,6 +494,7 @@ li{
     text-align: right;
     min-width: 12rem;
     font-size: 1.5rem;
+    
 }
 
 .timeline .date::after{
@@ -496,6 +505,7 @@ li{
     height: 1.5rem;
     width: 1.5rem;
     background-color: #ee75a0;
+    animation: pulse 2s infinite;
 }
 /*End timeline*/
 
@@ -524,7 +534,7 @@ textarea{
 
 input[type="submit"]{
     width: initial;
-    background-color:#cf6679;;
+    background-color:#cf6679;
     color:#eee;
     padding:1rem 2rem;
     border-radius: .8rem;
@@ -612,7 +622,7 @@ input[type="submit"]:hover{
 /*Start animations*/
 @keyframes pulse{
     0%{
-        box-shadow: 0 0 0 0 rgba(253, 87,191, 0.99);
+        box-shadow: 0 0 0 0 rgba(87, 253, 236, 0.99);
     }
     70%{
         box-shadow: 0 0 0 2rem rgba(253, 87,191, 0);
@@ -738,6 +748,10 @@ input[type="submit"]:hover{
     }
     .container{
         width: 50%;
+    }
+
+    .timeline ul{
+        padding-right: 15rem;
     }
 
     .menu-toggler{
