--- a/main.css
+++ b/main.css
@@ -29,10 +29,10 @@ body{
     
 }
 
-span{
+/* span{
     color: #a8b2d1;
     margin-right: 1rem;
-}
+} */
 
 
 
@@ -216,6 +216,7 @@ header{
 
 .email:hover{
     color: #c31985;
+    
 }
 
 
@@ -254,6 +255,11 @@ header{
 
 }
 
+.number{
+    color: #a8b2d1;
+    margin-right: 1rem;
+}
+
 li{
     margin: 0 2rem;
     list-style: none;
@@ -272,11 +278,58 @@ li{
 .nav-link:hover,
 .nav-link:focus{
     /* background: linear-gradient(to top, #78d8c3, #c31985); */
-    background: linear-gradient(to top, #27e8a7, #5beaed);
+     background: linear-gradient(to top, #27e8a7, #5beaed);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     
 }
+
+#resumecolor{
+    color: #c31985;
+}
+
+
+
+#resume:hover{
+    background: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 200px #03e9f4;
+}
+
+#resume {
+    
+    position: relative;
+    display: inline-block;
+    padding: 20px 25px;
+    margin: 90px 0;
+    color: #d0ebec;
+    font-size: 20px;
+    transition: 0.5s;
+    letter-spacing: 0.1rem;
+    
+    border: 1px solid #27e8a7;
+}
+
+a #resumespan{
+    position: absolute;
+    display: block;
+    
+}
+
+i a #resumespan:nth-child(1){
+    top: 0;
+   
+    width: 100%;
+    height: 2px;
+    
+    animation: animate1 1s linear infinite;
+    
+}
+
+
 
 .burger{
     display: none;
@@ -462,9 +515,10 @@ li{
 }
 .fa-github-square:hover{
     color: #a8b2d1;
+    
 }
 .fa-instagram:hover{
-    color: #c31985
+    color: #c31985;
     
 }
 .fa-linkedin:hover{
@@ -778,6 +832,16 @@ input[type="submit"]:hover{
     }
     
 }
+
+
+/* @keyframes animate1{
+    0%{
+        left: -100%;
+    }
+    50% , 100%{
+
+    }
+} */
 /*End animations*/
 
 /*Start media queries*/
