--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 }
 
 html{
+    overflow-x: hidden;
     font-size:10px;
     font-family: 'SF Mono Regular', "SF Mono", 'roboto',"SFMono-Regular", monospace ;
     color: #eee;
@@ -268,8 +269,8 @@ li{
     float: left;
     line-height: 80px;
     font-family: 'SF Mono Regular', "SF Mono", 'roboto',"SFMono-Regular", monospace ;
-    font-size: 2rem;
-    padding: 2rem ;
+    font-size: 1.7rem;
+    padding: 0rem 0.9rem ;
     display: block;
     font-weight: 300;
     
@@ -318,7 +319,7 @@ a #resumespan{
     display: block;
     
 }
-
+/* 
 i a #resumespan:nth-child(1){
     top: 0;
    
@@ -327,7 +328,7 @@ i a #resumespan:nth-child(1){
     
     animation: animate1 1s linear infinite;
     
-}
+} */
 
 
 
@@ -418,7 +419,7 @@ i a #resumespan:nth-child(1){
 .landing-text h1{
     justify-content: center;
     font-size:8rem;
-    font-family: 'Calibre','sf mono', 'sans-serif';
+    font-family: 'SF Mono Regular', "SF Mono", 'roboto',"SFMono-Regular", monospace ;
     /* font-family: 'The Historia Demo', sans-serif; */
     background: #a8b2d1;
     /* background: linear-gradient(to top, #2ee3bb, #f421a6); */
@@ -695,35 +696,51 @@ i a #resumespan:nth-child(1){
 form{
     width: 70%;
     margin: 0 auto;
+    
 }
 
 form label{
-    font-size: 1.5rem;
+    font-size: 1.9rem;
+    
 }
+
+
 
 input,
 select,
 textarea{
+    color: #03e9f4;
     width: 100%;
     padding: 1rem;
     margin-bottom: 5px;
     border: none;
-    outline-color: #fd57bf;
+    outline-color: #0a192f;
+    font-size: 2rem
 }
+
 
 input[type="submit"]{
     width: initial;
-    background-color:#cf6679;
+    background: transparent;
     color:#eee;
     padding:1rem 2rem;
-    border-radius: .8rem;
+    /* border-radius: .8rem; */
     cursor: pointer;
     transition: background-color 650ms;
+    margin-top: 3rem;
+    border: 1px solid #27e8a7;
 }
 
 input[type="submit"]:hover{
     color: #221e3f;
     background-color: #27e8a7;
+}
+input[type="text"],
+input[type="email"],
+textarea
+{
+    background: transparent;
+    border-bottom: 1px solid #27e8a7;
 }
 
 /*End contact*/
@@ -851,6 +868,7 @@ input[type="submit"]:hover{
 @media screen and (max-width: 768px) {
     body{
         overflow-x: hidden;
+        overflow-y: hidden;
         background: #0a192f;
         /* background: url(images/sitebg2.jpg) no-repeat center fixed;
         background-size: cover; */
