--- a/main.css
+++ b/main.css
@@ -235,7 +235,7 @@ header{
 
 .nav-list{
     width:100%;
-    height: 100%;
+    /* height: 100%; */
     list-style: none;
     display: flex;
     justify-content: center;
