--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ html{
     font-size:10px;
     font-family: 'SF Mono Regular', "SF Mono", 'roboto',"SFMono-Regular", monospace ;
     color: #eee;
+   
 }
 
 .mono-class {
@@ -34,6 +35,12 @@ body{
     color: #a8b2d1;
     margin-right: 1rem;
 } */
+:root{
+    --gradient-color1: linear-gradient(to right bottom, rgba(22, 93, 96, 0.8), rgba(12, 133, 105, 0.8));
+    --gradient-color2: linear-gradient(to right bottom, rgba(32, 157, 144, 0.8), rgba(37, 101, 157, 0.8));
+    --gradient-color3: linear-gradient(to right bottom, rgba(100, 63, 106, 0.8), rgba(27, 69, 59, 0.8));
+}
+
 
 
 
@@ -76,7 +83,262 @@ img{
     font-style: normal;
 }
 
-/** Regular */
+/**                                          Regular */
+
+
+
+.card{
+    display: flex;
+    flex-direction: column;
+    background-color: #0a192f;
+    /* box-shadow: 10px .8rem 1rem rgba(233, 228, 228, 0.01); */
+    margin-bottom: 10px;
+    
+
+}
+
+
+.image-data{
+    height: 25rem;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.background-image1 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("/images/sushi-uhd-4k-wallpaper.jpg") center no-repeat ;
+    background-size: cover;
+    z-index: -1;
+    transition: transform 5s;
+}
+
+
+.background-image2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("/images/20.jpg") center no-repeat ;
+    background-size: cover;
+    z-index: -1;
+    transition: transform 5s;
+}
+
+.background-image3{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("/images/pexels-photo-577585.jpg") no-repeat 40% 50% ;
+    background-size: cover;
+    z-index: -1;
+    transition: transform 5s;
+}
+
+
+.card:hover .background-image1{
+    transform: scale(1.5);
+}
+.card:hover .background-image2{
+    transform: scale(1.5);
+}
+.card:hover .background-image3{
+    transform: scale(1.5);
+}
+
+.publication-details{
+    width: 100%;
+    height: 100%;
+    background: var(--gradient-color2);
+    font-size:1.4rem;
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    top:0;
+    left:0;
+    padding: 1rem;
+}
+
+.pub2{
+    background: var(--gradient-color1);
+}
+
+.pub1{
+    background: var(--gradient-color3);
+}
+
+.publication-details i{
+    margin-right: 1rem;
+}
+
+.author{
+    display: inline-block;
+    margin-bottom: .5rem;
+    transition: all .5s .3s;
+}
+
+.author:hover{
+    color: rgba(255,255,255, .75);
+}
+.date{
+    display: block;
+}
+
+.post-data{
+    background-color: rgb(11, 63, 78);
+    padding: 2rem 3rem;
+    position: relative;
+}
+
+.title{
+    font-size: 2rem;
+    line-height: 1;
+    color: #27e8a7;
+    margin-left: 0.5rem;
+}
+
+.subtitle{
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #a2a2a2;
+    margin: 1rem 0 1.5rem 0;
+}
+
+.description{
+    position: relative;
+}
+
+.description::first-letter{
+    margin-left: 1rem;
+}
+
+.description::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left:0;
+    width: .5rem;
+    height: 2.2rem;
+    background: #c31985;
+    border-radius: 2rem;
+}
+
+.cta{
+    font-size: 1.5rem;
+    text-align: right;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
+.cta .cta1{
+    background: #c31985;
+    -webkit-background-clip: text;
+    color: transparent;
+    position: relative;
+}
+
+.cta a::before{
+    content:'';
+    position: absolute;
+    left: 0;
+    bottom: -.5rem;
+    width: 100%;
+    height: 3px;
+    background: #c31985;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform .5s;
+}
+
+.cta a:hover::before{
+    transform: scaleX(1);
+}
+
+
+@media screen and (min-width: 600px){
+    .card, .container{
+        flex-direction: row;
+        max-width: 90rem;
+        
+    }
+
+    .image-data{
+        margin-top: 5rem;
+        flex-basis: 40%;
+        height: unset;
+    }
+
+    .publication-details{
+        transform: translateX(0);
+        transition: transform .5s;
+    }
+
+    .card:hover .publication-details{
+        transform: translateX(-100%);
+    }
+
+    .author{
+        transform: translateY(0);
+        opacity: 0;
+        transition-delay: .3s; 
+    } 
+
+    .date{
+        transform: translateY(0);
+        opacity: 1;
+        transition: all .5s .3s;
+    }
+
+    .card:hover .author,
+    .card:hover .date{
+        transform: translateY(-3rem);
+        opacity: 0;
+    }
+
+    .post-data{
+        margin-top: 5rem;
+        flex-basis: 60%;
+    }
+
+    .post-data::before{
+        content: '';
+        width: 3.5rem;
+        height: 100%;
+        background-color: #0a192f;
+        position: absolute;
+        top: 0;
+        left: -1.5rem;
+        z-index: 10;
+        transform: skewX(-5deg);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**     END                                     Regular */
 
 
 
@@ -97,7 +359,7 @@ img{
 }
 .section-heading h1{
     letter-spacing: 0.1em;
-    font-size: 3.5rem;
+    font-size: 1.9rem;
     color: rgba(255,255,255, .3);
     text-transform: uppercase;
     font-weight: 300;
@@ -213,6 +475,7 @@ header{
     /* padding: 10px; */
     margin-left: 30px;
     bottom: 0;
+    transition: .5s;
 }
 
 .email:hover{
