--- a/main.css
+++ b/main.css
@@ -41,6 +41,22 @@ body{
     --gradient-color3: linear-gradient(to right bottom, rgba(100, 63, 106, 0.8), rgba(27, 69, 59, 0.8));
 }
 
+@-webkit-keyframes pop-in{
+    0% {
+      background: url('images/20.jpg') center no-repeat;
+      background-size: cover;
+      
+    }
+    50% {
+      background: url('images/boy.jpg') center no-repeat;
+      background-size: cover;
+    }
+    100% {
+      background: url('images/me.png') center no-repeat ;
+      background-size: cover;
+    }
+  }
+
 
 
 
@@ -124,7 +140,12 @@ img{
     position: absolute;
     top: 0;
     left: 0;
-    background: url("/images/20.jpg") center no-repeat ;
+    -webkit-animation-name: pop-in;
+    -webkit-animation-duration: 20s;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-iteration-count: infinite;
+    /* background: url("/images/20.jpg") center no-repeat ; */
     background-size: cover;
     z-index: -1;
     transition: transform 5s;
@@ -732,8 +753,11 @@ i a #resumespan:nth-child(1){
     margin-right: 5rem;
     position: relative;
     overflow: hidden;
-    
+    transition: transform 5s;
 }
+
+
+
 
 .profile-img::after{
     content: '';
@@ -747,11 +771,12 @@ i a #resumespan:nth-child(1){
     opacity: .1;
     mix-blend-mode: screen;
     z-index: 3;
+    
 }
 
-.profile-img:hover {
-    background: url("images/me.png") no-repeat;
-}
+
+
+
 
 
 
@@ -770,7 +795,14 @@ i a #resumespan:nth-child(1){
 }
 
 .social-media{
-    margin-top:1rem;
+    margin-top:3rem;
+}
+
+.social-media li{
+    font-weight: lighter;
+    color: #27e8a7;
+    font-size: 20px;
+    padding-left: 20px;
 }
 
 .social-media i{
@@ -787,6 +819,64 @@ i a #resumespan:nth-child(1){
 }
 .fa-linkedin:hover{
     color: #0077B5;
+}
+
+
+
+#fb::before {
+    display: inline-block;
+    content: '';
+    border-radius: 100%;
+    height: 4px;
+    width: 4px;
+    margin-right: 6px;
+    background: #3b5998;
+    transition: .5s;
+}
+
+
+#ig::before {
+    display: inline-block;
+    content: '';
+    border-radius: 100%;
+    height: 4px;
+    width: 4px;
+    margin-right: 6px;
+    background: #fcaf45;
+}
+
+
+#tw::before {
+    display: inline-block;
+    content: '';
+    border-radius: 100%;
+    height: 4px;
+    width: 4px;
+    margin-right: 6px;
+    background: #55acee;
+}
+
+
+#gh::before {
+    display: inline-block;
+    content: '';
+    border-radius: 100%;
+    height: 4px;
+    width: 4px;
+    margin-right: 6px;
+    background: #c4302b;
+}
+
+#fb:hover {
+    color: #2f67cd;
+}
+
+#ig:hover {
+    color: #fcaf45;
+}
+
+#gh:hover {
+    color: #c4302b;
 }
 /*End about*/
 
@@ -837,7 +927,6 @@ i a #resumespan:nth-child(1){
    align-items: center;
    justify-content: center;
    margin-bottom: 5rem; 
-   
 }
 .portfolio-item:last-child{
     margin-bottom: 0;
