--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ html{
     font-size:10px;
     font-family: 'SF Mono Regular', "SF Mono", 'roboto',"SFMono-Regular", monospace ;
     color: #eee;
-   
+
 }
 
 .mono-class {
@@ -122,9 +122,9 @@ body{
     margin-right: 1rem;
 } */
 :root{
-    --gradient-color1: linear-gradient(to right bottom, rgba(22, 93, 96, 0.8), rgba(12, 133, 105, 0.8));
-    --gradient-color2: linear-gradient(to right bottom, rgba(32, 157, 144, 0.8), rgba(37, 101, 157, 0.8));
-    --gradient-color3: linear-gradient(to right bottom, rgba(100, 63, 106, 0.8), rgba(27, 69, 59, 0.8));
+    --gradient-color1: linear-gradient(to right bottom, rgba(22, 93, 96, 0.345), rgba(12, 133, 105, 0.8));
+    --gradient-color2: linear-gradient(to right bottom, rgba(32, 157, 145, 0.475), rgba(37, 101, 157, 0.8));
+    --gradient-color3: linear-gradient(to right bottom, rgba(100, 63, 106, 0.571), rgba(27, 69, 59, 0.8));
 }
 
 @-webkit-keyframes pop-in{
@@ -300,7 +300,7 @@ img{
 }
 
 .post-data{
-    background-color: rgb(11, 63, 78);
+    background-color: rgba(11, 64, 78, 0.331);
     padding: 2rem 3rem;
     position: relative;
 }
@@ -1325,6 +1325,8 @@ textarea
     font-size: 1.4rem;
     letter-spacing: 0.1em;
 }
+
+
 /*End footer*/
 
 /*Start animations*/
