--- a/main.css
+++ b/main.css
@@ -261,15 +261,10 @@ img{
     position: absolute;
     top: 0;
     left: 0;
-    -webkit-animation-name: pop-in;
-    -webkit-animation-duration: 20s;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-timing-function: ease;
-    -webkit-animation-iteration-count: infinite;
     /* background: url("/images/20.jpg") center no-repeat ; */
-    background-size: cover;
+    /* background-size: cover; */
     z-index: -1;
-    transition: transform 5s;
+    /* transition: transform 5s; */
 }
 
 .background-image3{
@@ -278,14 +273,14 @@ img{
     position: absolute;
     top: 0;
     left: 0;
-    background: url("/images/pexels-photo-577585.jpg") no-repeat 40% 50% ;
-    background-size: cover;
+    /* background: url("/images/pexels-photo-577585.jpg") no-repeat 40% 50% ;
+    background-size: cover; */
     z-index: -1;
-    transition: transform 5s;
+    /* transition: transform 5s; */
 }
 
 
-.card:hover .background-image1{
+/* .card:hover .background-image1{
     transform: scale(1.5);
 }
 .card:hover .background-image2{
@@ -293,7 +288,7 @@ img{
 }
 .card:hover .background-image3{
     transform: scale(1.5);
-}
+} */
 
 .publication-details{
     width: 100%;
@@ -423,9 +418,9 @@ img{
         transition: transform .5s;
     }
 
-    .card:hover .publication-details{
+    /* .card:hover .publication-details{
         transform: translateX(-100%);
-    }
+    } */
 
     .author{
         transform: translateY(0);
@@ -439,11 +434,11 @@ img{
         transition: all .5s .3s;
     }
 
-    .card:hover .author,
+    /* .card:hover .author,
     .card:hover .date{
         transform: translateY(-3rem);
         opacity: 0;
-    }
+    } */
 
     .post-data{
         margin-top: 5rem;
